third_party/move/move-compiler-v2/tests/lambda/inline-parity/shadowing_renamed_param.exp

Diagnostics:
error: Only inline functions may have function-typed parameters, but non-inline function `Test::foo` has a function parameter:
  ┌─ tests/lambda/inline-parity/shadowing_renamed_param.move:4:16
  │
4 │     public fun foo(f:|u64|, x:u64) {
  │                ^^^ - Parameter `f` has function-valued type `|u64|`.

error: Only inline functions may have function-typed parameters, but non-inline function `Test::foo2` has a function parameter:
  ┌─ tests/lambda/inline-parity/shadowing_renamed_param.move:8:16
  │
8 │     public fun foo2(f:|u64|, x:u64) {
  │                ^^^^ - Parameter `f` has function-valued type `|u64|`.
